--- a/css/body.css
+++ b/css/body.css
@@ -1,6 +1,6 @@
         .main_body {
             width: 100%;
-            height: 80%;
+            height: 90%;
             background-color: #16191C;
             display: flex;
             box-sizing: border-box;
@@ -11,7 +11,6 @@
             width: 10%;
             display: flex;
             box-sizing: border-box;
-            background-color: red;
             display: flex;
             flex-direction: column;
         }
@@ -21,7 +20,6 @@
             width: 50%;
             display: flex;
             box-sizing: border-box;
-            background-color: orange;
             padding: 10px;
             flex-direction: column;
             align-items: center;
@@ -48,6 +46,7 @@
             font-weight: 700px;
             font-size: 50px;
             text-align: center;
+            color: #ffffff;
         }
         
         .hi {
@@ -107,8 +106,7 @@
         }
         
         .about_me_btn::after {
-            content: 'Hey! My name is Tahrer. I am a web designer . I’ve always been someone who has both a creative and a logical side. When I discovered web design in college, I realized it would be the perfect fit. ';
-            background-color: palegreen;
+            content: 'Hey! My name is Tahrer. I am a web designer. I’ve always been someone who has both a logical and a technical side. When I discovered programming in school, I realized it would be the perfect fit. So, I am starting my voyage to find my passion. ';
             height: 100%;
             width: 100%;
             position: absolute;
@@ -125,6 +123,7 @@
             line-height: calc(30px + 2vw);
             align-self: center;
             visibility: hidden;
+            background-color: #16191C;
         }
         
         .about_me_btn:active::after {
