--- a/css/page2.css
+++ b/css/page2.css
@@ -1,47 +1,53 @@
-                .page2 {
-                    background-color: #8BB8D9;
-                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                    display: flex;
-                }
-                
-                .page2_body {
-                    width: 100%;
-                    height: 90%;
-                    background-color: #8BB8D9;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    text-align: center;
-                    row-gap: calc(30px + 2vw);
-                }
-                
-                .page2_body h1 {
-                    font-size: calc(30px + 2vw);
-                }
-                
-                .footer {
-                    width: 100%;
-                    height: 10%;
-                    background-color: red;
-                }
-                
-                .company_logo {
-                    background-image: url('image/myimage.jpg')
-                }
-                
-                .companies {
-                    width: 80%;
-                    height: 50%;
-                    background-color: darkgreen;
-                    display: grid;
-                    grid-template-columns: repeat(3, auto);
-                    gap: 10px;
-                    place-items: center;
-                    grid-auto-flow: dense;
-                }
-                
-                .company_logo {
-                    height: 50%;
-                    width: 50%;
-                }
+                    .page2 {
+                        background-color: #8BB8D9;
+                        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                        display: flex;
+                    }
+                    
+                    .page2_body {
+                        width: 100%;
+                        height: 90%;
+                        background-color: #8BB8D9;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        text-align: center;
+                        row-gap: calc(30px + 2vw);
+                    }
+                    
+                    .page2_body h1 {
+                        font-size: calc(30px + 2vw);
+                    }
+                    
+                    .footer {
+                        width: 100%;
+                        height: 10%;
+                        background-color: red;
+                    }
+                    
+                    .company_logo {
+                        background-image: url('')
+                    }
+                    
+                    .companies {
+                        width: 90%;
+                        height: 60%;
+                        background-color: darkgreen;
+                        display: flex;
+                        justify-content: space-evenly;
+                        align-items: center;
+                        gap: 10px;
+                    }
+                    
+                    .company_logo {
+                        height: 100px;
+                        width: 200px;
+                        margin: 0;
+                        padding: 0;
+                    }
+                    
+                    .company_logo_img {
+                        height: 100%;
+                        width: 100%;
+                    }
