--- a/css/page2.css
+++ b/css/page2.css
@@ -1,10 +1,10 @@
-                    .page2 {
+                    .other_pages {
                         background-color: #8BB8D9;
-                        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                        font-family: 'Fruktur', cursive;
                         display: flex;
                     }
                     
-                    .page2_body {
+                    .other_pages_body {
                         width: 100%;
                         height: 90%;
                         background-color: #8BB8D9;
@@ -16,28 +16,17 @@
                         row-gap: calc(30px + 2vw);
                     }
                     
-                    .page2_body h1 {
+                    .other_pages_body h1 {
+                        padding: 30px;
                         font-size: calc(30px + 2vw);
                     }
                     
-                    .footer {
-                        width: 100%;
-                        height: 10%;
-                        background-color: red;
-                    }
-                    
-                    .company_logo {
-                        background-image: url('')
-                    }
-                    
                     .companies {
-                        width: 90%;
+                        width: 80%;
                         height: 60%;
-                        background-color: darkgreen;
                         display: flex;
-                        justify-content: space-evenly;
                         align-items: center;
-                        gap: 10px;
+                        justify-content: space-between;
                     }
                     
                     .company_logo {
@@ -45,6 +34,18 @@
                         width: 200px;
                         margin: 0;
                         padding: 0;
+                        transform: rotate(-1deg);
+                        box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
+                        transition: all 0.13s ease-in;
+                    }
+                    
+                    .logo_border {
+                        transition: all 0.13s ease-in;
+                    }
+                    
+                    .company_logo:hover {
+                        transform: translateY(-10px) rotate(1deg);
+                        box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
                     }
                     
                     .company_logo_img {
