--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 .page {
@@ -10,3 +11,5 @@
     display: flex;
     flex-direction: column;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Ceviche+One&family=Dancing+Script:wght@700&display=swap');
