--- a/css/header.css
+++ b/css/header.css
@@ -1,28 +1,37 @@
-.main_header {
-    width: 100%;
-    height: 10%;
-    background-color: #8BB8D9;
-    font-family: 'Ceviche One', cursive;
-    font-size: x-large;
-    display: flex;
-    justify-content: space-between;
-}
-
-.logo {
-    height: 100%;
-    width: 15%;
-    background-color: brown;
-}
-
-.navbar {
-    height: 100%;
-    width: 30%;
-    display: flex;
-    background-color: brown;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.navbar_items {
-    display: flex;
-}
+    .main_header {
+        width: 100%;
+        height: 10%;
+        font-size: x-large;
+        display: flex;
+        justify-content: space-between;
+        background-color: #16191C;
+    }
+    
+    .logo {
+        height: 100%;
+        width: 15%;
+        background-color: #16191C;
+    }
+    
+    .navbar {
+        height: 100%;
+        width: 30%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        font: normal bold 20px "Komika", cursive;
+        color: #ffffff;
+    }
+    
+    .navbar_item {
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
+    .navbar_item:hover {
+        background-color: slategrey;
+    }
