--- a/css/page3.css
+++ b/css/page3.css
@@ -1,34 +1,33 @@
 .page3 {
-    background-color: #8BB8D9;
     font-family: 'Fruktur', cursive;
     display: flex;
     margin: 0;
 }
 
 .page3>.other_pages_body {
-    background-color: tomato;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     gap: 0;
+    background-color: #16191C;
+    color: #ffffff;
 }
 
 .page3_form {
-    background-color: greenyellow;
-    width: 100%;
+    width: 90%;
     height: 85%;
     text-align: left;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
 }
 
 label {
-    font: normal bold 20px/1 "Komika", cursive;
+    font: normal bold 15px "Komika", cursive;
+    color: #ffffff;
 }
 
 .page3_header {
-    background-color: violet;
     width: 100%;
     height: 15%;
     display: flex;
@@ -44,7 +43,7 @@ textarea {
     border-radius: 4px;
     box-sizing: border-box;
     margin-top: 6px;
-    margin-bottom: 16px;
+    margin-bottom: 10px;
     resize: vertical;
 }
 
@@ -54,7 +53,6 @@ textarea {
 }
 
 input[type=submit] {
-    background-color: #04AA6D;
     color: white;
     width: 100%;
     padding: 12px 20px;
