--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,18 @@
     scroll-behavior: smooth;
 }
 
+.container {
+    height: 100vh;
+    width: 100vw;
+    box-sizing: border-box;
+}
+
 .page {
     height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Ceviche+One&family=Dancing+Script:wght@700&display=swap');
