--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
         display: flex;
         justify-content: space-between;
         background-color: #16191C;
+        overflow: hidden;
     }
     
     .logo {
