--- a/css/page2.css
+++ b/css/page2.css
@@ -4,6 +4,7 @@
                         display: flex;
                         height: 100vh;
                         width: 100vw;
+                        overflow: hidden;
                     }
                     
                     .other_pages_body {
