--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Ceviche+One&family=Dancing+Script:wght@700&display=swap');
