--- a/css/page2.css
+++ b/css/page2.css
@@ -4,7 +4,9 @@
                         display: flex;
                         height: 100vh;
                         width: 100vw;
-                        overflow: hidden;
+                        box-sizing: border-box;
+                        margin: 0;
+                        padding: 0;
                     }
                     
                     .other_pages_body {
